epub4j-native/cpp/include/epub_native.h

// ============================================================================
// Error Codes
// ============================================================================

typedef enum {
    EPUB_NATIVE_SUCCESS = 0,
    EPUB_NATIVE_ERROR_PARSE = 1,
    EPUB_NATIVE_ERROR_IO = 2,
    EPUB_NATIVE_ERROR_MEMORY = 3,
    EPUB_NATIVE_ERROR_INVALID_ARG = 4,
    EPUB_NATIVE_ERROR_NOT_FOUND = 5,
    EPUB_NATIVE_ERROR_NAMESPACE = 6
} EpubNativeError;
// ============================================================================
// Opaque Types (handled internally by C++ implementation)
// ============================================================================

typedef struct EpubNativePackageDocument EpubNativePackageDocument;
typedef struct EpubNativeNCXDocument EpubNativeNCXDocument;
/**
 * Get spine item IDs in reading order
 * @param doc Package document
 * @param out_ids Output array of IDs
 * @param out_count Output count of IDs
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_package_get_spine_items(
    EpubNativePackageDocument* doc,
    const char*** out_ids,
    size_t* out_count
);
/**
 * Get all manifest item IDs (not just spine items)
 * @param doc Package document
 * @param out_ids Output array of IDs
 * @param out_count Output count of IDs
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_package_get_all_manifest_items(
    EpubNativePackageDocument* doc,
    const char*** out_ids,
    size_t* out_count
);
/**
 * Free spine items array
 * @param ids Array to free
 * @param count Count of items
 */
EPUB_NATIVE_API void epub_native_package_free_spine_items(
    const char** ids,
    size_t count
);
/**
 * Get cover image href
 * @param doc Package document
 * @param out_cover_href Output cover href (caller must free)
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_package_get_cover(
    EpubNativePackageDocument* doc,
    const char** out_cover_href
);
/**
 * Get metadata value by name
 * @param doc Package document
 * @param metadata_name Metadata name (e.g., "title", "creator")
 * @param out_value Output value (caller must free)
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_package_get_metadata(
    EpubNativePackageDocument* doc,
    const char* metadata_name,
    const char** out_value
);
// ============================================================================
// NCX Document (EPUB 2 TOC)
// ============================================================================

/**
 * Parse an NCX document from XML content
 * @param xml_content UTF-8 XML string
 * @param xml_length Length of XML content
 * @param out_doc Output document pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_ncx_parse(
    const char* xml_content,
    size_t xml_length,
    EpubNativeNCXDocument** out_doc
);