epub4j-native/java/src/main/java/org/grimmory/epub4j/native_parsing/EpubNativeHeaders.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_spine_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static FunctionDescriptor epub_native_package_get_spine_items$descriptor() {
        return epub_native_package_get_spine_items.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_spine_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static MethodHandle epub_native_package_get_spine_items$handle() {
        return epub_native_package_get_spine_items.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_spine_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static MemorySegment epub_native_package_get_spine_items$address() {
        return epub_native_package_get_spine_items.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_spine_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static int epub_native_package_get_spine_items(MemorySegment doc, MemorySegment out_ids, MemorySegment out_count) {
        var mh$ = epub_native_package_get_spine_items.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_get_spine_items", doc, out_ids, out_count);
            }
            return (int)mh$.invokeExact(doc, out_ids, out_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_free_spine_items {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_free_spine_items");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void epub_native_package_free_spine_items(const char **ids, size_t count)
     * }
     */
    public static FunctionDescriptor epub_native_package_free_spine_items$descriptor() {
        return epub_native_package_free_spine_items.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void epub_native_package_free_spine_items(const char **ids, size_t count)
     * }
     */
    public static MethodHandle epub_native_package_free_spine_items$handle() {
        return epub_native_package_free_spine_items.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void epub_native_package_free_spine_items(const char **ids, size_t count)
     * }
     */
    public static MemorySegment epub_native_package_free_spine_items$address() {
        return epub_native_package_free_spine_items.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void epub_native_package_free_spine_items(const char **ids, size_t count)
     * }
     */
    public static void epub_native_package_free_spine_items(MemorySegment ids, long count) {
        var mh$ = epub_native_package_free_spine_items.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_free_spine_items", ids, count);
            }
            mh$.invokeExact(ids, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_get_all_manifest_items {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_get_all_manifest_items");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_all_manifest_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static FunctionDescriptor epub_native_package_get_all_manifest_items$descriptor() {
        return epub_native_package_get_all_manifest_items.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_all_manifest_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static MethodHandle epub_native_package_get_all_manifest_items$handle() {
        return epub_native_package_get_all_manifest_items.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_all_manifest_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static MemorySegment epub_native_package_get_all_manifest_items$address() {
        return epub_native_package_get_all_manifest_items.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_all_manifest_items(EpubNativePackageDocument *doc, const char ***out_ids, size_t *out_count)
     * }
     */
    public static int epub_native_package_get_all_manifest_items(MemorySegment doc, MemorySegment out_ids, MemorySegment out_count) {
        var mh$ = epub_native_package_get_all_manifest_items.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_get_all_manifest_items", doc, out_ids, out_count);
            }
            return (int)mh$.invokeExact(doc, out_ids, out_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_get_cover {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_get_cover");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_cover(EpubNativePackageDocument *doc, const char **out_cover_href)
     * }
     */
    public static FunctionDescriptor epub_native_package_get_cover$descriptor() {
        return epub_native_package_get_cover.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_cover(EpubNativePackageDocument *doc, const char **out_cover_href)
     * }
     */
    public static MethodHandle epub_native_package_get_cover$handle() {
        return epub_native_package_get_cover.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_cover(EpubNativePackageDocument *doc, const char **out_cover_href)
     * }
     */
    public static MemorySegment epub_native_package_get_cover$address() {
        return epub_native_package_get_cover.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_cover(EpubNativePackageDocument *doc, const char **out_cover_href)
     * }
     */
    public static int epub_native_package_get_cover(MemorySegment doc, MemorySegment out_cover_href) {
        var mh$ = epub_native_package_get_cover.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_get_cover", doc, out_cover_href);
            }
            return (int)mh$.invokeExact(doc, out_cover_href);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_get_metadata {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_get_metadata");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_metadata(EpubNativePackageDocument *doc, const char *metadata_name, const char **out_value)
     * }
     */
    public static FunctionDescriptor epub_native_package_get_metadata$descriptor() {
        return epub_native_package_get_metadata.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_metadata(EpubNativePackageDocument *doc, const char *metadata_name, const char **out_value)
     * }
     */
    public static MethodHandle epub_native_package_get_metadata$handle() {
        return epub_native_package_get_metadata.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_metadata(EpubNativePackageDocument *doc, const char *metadata_name, const char **out_value)
     * }
     */
    public static MemorySegment epub_native_package_get_metadata$address() {
        return epub_native_package_get_metadata.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_metadata(EpubNativePackageDocument *doc, const char *metadata_name, const char **out_value)
     * }
     */
    public static int epub_native_package_get_metadata(MemorySegment doc, MemorySegment metadata_name, MemorySegment out_value) {
        var mh$ = epub_native_package_get_metadata.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_get_metadata", doc, metadata_name, out_value);
            }
            return (int)mh$.invokeExact(doc, metadata_name, out_value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_ncx_parse {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_ncx_parse");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_parse(const char *xml_content, size_t xml_length, EpubNativeNCXDocument **out_doc)
     * }
     */
    public static FunctionDescriptor epub_native_ncx_parse$descriptor() {
        return epub_native_ncx_parse.DESC;
    }
